# cinematica

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  git-ops.md
.claude/rules/: code-writing.md  coding.md
.github/workflows/: ci.yml  pipeline.yaml  pylint.yml
data/: dataset-metadata.json
datasets/: README.md
docker/: docker-compose.yml
scripts/: README.md  movie-library-ddl.sql  movie-library-dml.sql
scripts/DDL/: database-creation.sql
scripts/DML/: countries-seed.sql  directors-seed.sql  film-genre-seed.sql  films-seed.sql  genres-seed.sql  movie-genre-seed.sql  movies-seed.sql  users-seed.sql
src/: Cinematica.sln  logger.py  main.py
src/Cinematica.Application/: Cinematica.Application.csproj
src/Cinematica.Data/: Cinematica.Data.csproj
src/Cinematica.Presentation/: Cinematica.Presentation.csproj  Program.cs  Usings.cs  appsettings.json
src/Cinematica.Tests/: Cinematica.Tests.csproj
src/MovieLibrary.Application/: MovieLibrary.Application.csproj
src/MovieLibrary.Data/: MovieLibrary.Data.csproj
src/MovieLibrary.Presentation/: appsettings.json
src/MovieLibrary.Tests/: MovieLibrary.Tests.csproj  Usings.cs
src/agents/: agent.py  graph.py  schema.py  state.py  tools.py
src/api/: app.py
src/imdb/: filters.py  loader.py
src/models/: agent.py  imdb.py  tmdb.py
src/pipeline/: compile.py  consolidate.py  embed.py  enrich.py  load.py  serialize.py  step1_filter_movies.py
src/pipelines/: step1_filter_movies.py
tests/agents/: test_agent.py  test_graph.py  (+1 more)
(+173 files in other folders)
