[project]
name = "cinematica"
version = "0.1.0"
description = "An agentic AI-powered Knowledge Graph for semantic exploration and intelligent insights over film data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.4.22",
    "httpx>=0.28.1",
    "neo4j>=6.2.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]
